--- a/sass/theme/_theme.scss
+++ b/sass/theme/_theme.scss
@@ -1,1 +1,4 @@
-// This is an empty scss file for your custom styles - Please add your super duper awesome mega design styles here
+@import "partials/core";
+@import "partials/navigation";
+@import "partials/header";
+@import "partials/footer";
